# CS171-Computer-Graphics

./: README.md
hw1/include/: mesh.h  shader.h
hw1/report/: report.tex
hw1/src/: frag_shader.fs  geometry_shader.gs  main.cpp  mesh.cpp  shader.cpp  vertex_shader.vs
hw2/: README.md
hw2/assets/: ducky.bzs
hw2/include/: bezier.h  camera.h  nurbs.hpp  object.h
hw2/report/: report.tex
hw2/src/: bezier.cpp  fragment_shader.fs  main.cpp  object.cpp  vertex_shader.vs
hw3/: CMakeLists.txt  README.md  main.cpp
hw3/include/: camera.h  core.h  geometry.h  image.h  integrator.h  interaction.h  light.h  material.h  ray.h  scene.h  texture.h  utils.h
hw3/libs/: CMakeLists.txt
hw3/report/: acmart.cls  report.tex
hw3/src/: CMakeLists.txt  camera.cpp  geometry.cpp  image.cpp  integrator.cpp  light.cpp  material.cpp  scene.cpp  texture.cpp
hw3/test/: requirement.txt  similiar.py
hw4/: README.md  main.cpp
hw4/configs/: large_mesh.json
hw4/include/: accel.h  bsdf.h  config.h  config_io.h  geometry.h  integrator.h  light.h  scene.h
hw4/report/: report.tex
hw4/src/: accel.cpp  bsdf.cpp  geometry.cpp  integrator.cpp  light.cpp  scene.cpp
hw5/: README.md
hw5/include/: cloth.h
hw5/report/: report.tex
hw5/src/: camera.cpp  cloth.cpp  main.cpp
project-SPPM/: README.md
project-SPPM/code/: CMakeLists.txt
project-SPPM/code/include/: Config.h  brdf.h  camera.h  core.h  hitpoint.h  object.h  ray.h  scene.h  texture.h  utils.h
project-SPPM/code/src/: camera.cpp  hitpoint.cpp  main.cpp  object.cpp  scene.cpp  texture.cpp  utils.cpp
(+6 files in other folders)
